tests/NormalTests/paczka1/small_fuzzy/75080036.err
Error in line 1: 8UqUULvc8 S477 32,4
Error in line 5: A136 A44 80,9
Error in line 4: 8UqUULvc8 A136 14,8
Error in line 10: 8UqUULvc8 A44 34,5
